--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "parse-function": "^5.6.10",
     "tslint": "~6.1.0"
   },
   "devDependencies": {
